--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         #question {
             color: #ffffff;
-            font-size: 24px;
+            font-size: 50px;
             text-align: center;
             font-family: "Comic Sans MS", "Comic Sans", cursive;
         }
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-    <div id="question"> Cuzinho hj?</div>?</div>
+    <div id="question"> Cuzinho hj ?</div>
     <div id="options">
         <div id="noContainer">
             <button id="no" class="button">Não</button>
