--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-    <div id="question"> Cuzinho hj ?</div>
+    <div id="question"> Czinho hj ?</div>
     <div id="options">
         <div id="noContainer">
             <button id="no" class="button">Não</button>
